fix: route OCR through backend proxy