@@ -42,26 +42,39 @@ import java.io.InputStream;
 import java.util.Arrays;
 import java.util.List;
 
+import okhttp3.MediaType;
 import okhttp3.MultipartBody;
+import okhttp3.RequestBody;
 import retrofit2.Call;
 import retrofit2.Callback;
 import retrofit2.Response;
 
 public class CreateProfileActivity extends AppCompatActivity {
-    private TextInputEditText etFullName, etPhone, etRelation, etDob, etAddressDetail;
+    private TextInputEditText etFullName;
+    private TextInputEditText etPhone;
+    private TextInputEditText etRelation;
+    private TextInputEditText etDob;
+    private TextInputEditText etAddressDetail;
 
-    private MaterialAutoCompleteTextView autoCountry, autoGender, autoProvince, autoDistrict, autoWard;
+    private MaterialAutoCompleteTextView autoCountry;
+    private MaterialAutoCompleteTextView autoGender;
+    private MaterialAutoCompleteTextView autoProvince;
+    private MaterialAutoCompleteTextView autoDistrict;
+    private MaterialAutoCompleteTextView autoWard;
 
-    private MaterialButton btnCreate, btnBack, btnScan;
+    private MaterialButton btnCreate;
+    private MaterialButton btnBack;
+    private MaterialButton btnScan;
     private ProgressBar progressBar;
+
     private CareProfileService careProfileService;
     private LocationService locationService;
     private OCRService ocrService;
     private List<Province> provinceList;
     private List<District> districtList;
     private List<Ward> wardList;
-    private final List<String> genderList = Arrays.asList("Nam", "Nữ", "Khác");
-    private final List<String> countryList = List.of("Việt Nam");
+    private final List<String> genderList = Arrays.asList("Nam", "Nu", "Khac");
+    private final List<String> countryList = List.of("Viet Nam");
 
     private String selectedProvinceCode;
     private String selectedDistrictCode;
@@ -75,13 +88,9 @@ public class CreateProfileActivity extends AppCompatActivity {
     protected void onCreate(@Nullable Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
         setContentView(R.layout.create_profile);
+
         SessionManager sessionManager = new SessionManager(this);
-        SessionInterceptor.TokenProvider tokenProvider = new SessionInterceptor.TokenProvider() {
-            @Override
-            public String getToken() {
-                return sessionManager.getBearer();
-            }
-        };
+        SessionInterceptor.TokenProvider tokenProvider = sessionManager::getBearer;
 
         careProfileService = ApiServices.create(CareProfileService.class, tokenProvider);
         locationService = ApiServices.create(LocationService.class, tokenProvider);
@@ -92,7 +101,9 @@ public class CreateProfileActivity extends AppCompatActivity {
                 result -> {
                     if (result.getResultCode() == Activity.RESULT_OK && result.getData() != null) {
                         Uri imageUri = result.getData().getData();
-                        processOCR(imageUri, ocrService);
+                        if (imageUri != null) {
+                            processOCR(imageUri);
+                        }
                     }
                 }
         );
@@ -101,24 +112,17 @@ public class CreateProfileActivity extends AppCompatActivity {
                 new ActivityResultContracts.TakePicture(),
                 isSuccess -> {
                     if (isSuccess && ScanManager.cameraImageUri != null) {
-                        // Dùng Uri từ ScanManager
-//                        processOCR(ScanManager.cameraImageUri);
-                        Toast.makeText(CreateProfileActivity.this, "Chụp ảnh thành công",
-                                Toast.LENGTH_LONG).show();
+                        processOCR(ScanManager.cameraImageUri);
                     }
                 }
         );
 
         initView();
-
         loadProvinces(locationService);
         initEvent();
-        btnScan.setOnClickListener(v -> {
-            ScanManager.openGallery(pickImageLauncher);
-        });
     }
 
-    private void initView(){
+    private void initView() {
         etFullName = findViewById(R.id.edtFullName);
         etPhone = findViewById(R.id.edtPhone);
         etRelation = findViewById(R.id.edtRelation);
@@ -129,7 +133,6 @@ public class CreateProfileActivity extends AppCompatActivity {
         autoDistrict = findViewById(R.id.autoDistrict);
         autoWard = findViewById(R.id.autoWard);
         etAddressDetail = findViewById(R.id.edtAddress);
-        //edtCCCD = findViewById(R.id.edtCCCD);
 
         HandleAutoComplete.setupDropDown(autoCountry, countryList);
         HandleAutoComplete.setupDropDown(autoGender, genderList);
@@ -137,75 +140,69 @@ public class CreateProfileActivity extends AppCompatActivity {
         btnCreate = findViewById(R.id.btnCreate);
         btnBack = findViewById(R.id.btnBack);
         btnScan = findViewById(R.id.btnScan);
-
         loadingDialog = new LoadingDialog(this);
     }
 
-    private void initEvent(){
+    private void initEvent() {
         btnBack.setOnClickListener(v -> finish());
         btnCreate.setOnClickListener(v -> sendRequest(careProfileService));
+        btnScan.setOnClickListener(v ->
+                ScanManager.showScanOptionDialog(v, pickImageLauncher, takePictureLauncher)
+        );
     }
 
-    private CreateCareProfileRequest createRequest(){
-        // Lấy từ TextInputEditText
-        String fullName = etFullName.getText() != null
-                ? etFullName.getText().toString().trim()
-                : "";
+    private CreateCareProfileRequest createRequest() {
+        String fullName = getText(etFullName);
+        String phone = getText(etPhone);
+        String relation = getText(etRelation);
+        String dob = getText(etDob).isEmpty() ? "" : ConvertDate.VNtoDateUS(getText(etDob));
+        String addressDetail = getText(etAddressDetail);
+        String country = getAutoText(autoCountry);
+        String gender = getAutoText(autoGender);
 
-        String phone = etPhone.getText() != null
-                ? etPhone.getText().toString().trim()
-                : "";
-
-        String relation = etRelation.getText() != null
-                ? etRelation.getText().toString().trim()
-                : "";
-
-        String dob = etDob.getText() != null
-                ? ConvertDate.VNtoDateUS(etDob.getText().toString().trim())
-                : "";
-
-        String addressDetail = etAddressDetail.getText() != null
-                ? etAddressDetail.getText().toString().trim()
-                : "";
-
-
-        // Lấy từ MaterialAutoCompleteTextView
-        String country = autoCountry.getText() != null
-                ? autoCountry.getText().toString().trim()
-                : "";
-
-        String gender = autoGender.getText() != null
-                ? autoGender.getText().toString().trim()
-                : "";
-
-
-        return new CreateCareProfileRequest(fullName, relation, phone, country, gender,
-                dob, selectedProvinceCode, selectedDistrictCode, selectedWardCode, addressDetail);
+        return new CreateCareProfileRequest(
+                fullName,
+                relation,
+                phone,
+                country,
+                gender,
+                dob,
+                selectedProvinceCode,
+                selectedDistrictCode,
+                selectedWardCode,
+                addressDetail
+        );
     }
 
-    private void sendRequest(CareProfileService careProfileService){
+    private String getText(TextInputEditText input) {
+        return input.getText() == null ? "" : input.getText().toString().trim();
+    }
+
+    private String getAutoText(MaterialAutoCompleteTextView input) {
+        return input.getText() == null ? "" : input.getText().toString().trim();
+    }
+
+    private void sendRequest(CareProfileService careProfileService) {
         CreateCareProfileRequest request = createRequest();
         careProfileService.createCareProfile(request).enqueue(new Callback<CreateCareProfileResponse>() {
             @Override
             public void onResponse(Call<CreateCareProfileResponse> call, Response<CreateCareProfileResponse> response) {
-                if(response.isSuccessful() && response.body()!= null){
+                if (response.isSuccessful() && response.body() != null) {
                     Toast.makeText(CreateProfileActivity.this, response.body().getMessage(), Toast.LENGTH_LONG).show();
                     finish();
+                    return;
                 }
-                if (!response.isSuccessful() && response.body() != null) {
-                    Toast.makeText(CreateProfileActivity.this, response.body().getMessage(), Toast.LENGTH_LONG).show();
-                }
+                Toast.makeText(CreateProfileActivity.this, "Tao ho so that bai: " + response.code(), Toast.LENGTH_LONG).show();
             }
 
             @Override
             public void onFailure(Call<CreateCareProfileResponse> call, Throwable throwable) {
                 Toast.makeText(CreateProfileActivity.this, throwable.getMessage(), Toast.LENGTH_LONG).show();
-
             }
         });
     }
 
-    private void loadProvinces(LocationService locationService){
+    private void loadProvinces(LocationService locationService) {
         locationService.getProvinces().enqueue(new Callback<ProvinceResponse>() {
             @Override
             public void onResponse(Call<ProvinceResponse> call, Response<ProvinceResponse> response) {
@@ -215,69 +212,66 @@ public class CreateProfileActivity extends AppCompatActivity {
                     autoProvince.setOnItemClickListener((parent, view, position, id) -> {
                         autoDistrict.setText("");
                         autoWard.setText("");
+                        selectedDistrictCode = null;
+                        selectedWardCode = null;
 
                         Province selected = (Province) parent.getItemAtPosition(position);
                         selectedProvinceCode = selected.getCode();
                         loadDistricts(locationService, selectedProvinceCode);
                     });
-                } else {
-                    Toast.makeText(CreateProfileActivity.this,
-                            "Không lấy được tỉnh: " + response.code(), Toast.LENGTH_LONG).show();
+                    return;
                 }
+                Toast.makeText(CreateProfileActivity.this, "Khong lay duoc tinh: " + response.code(), Toast.LENGTH_LONG).show();
             }
 
             @Override
             public void onFailure(Call<ProvinceResponse> call, Throwable throwable) {
-                Toast.makeText(CreateProfileActivity.this,
-                        throwable.getMessage(), Toast.LENGTH_LONG).show();
+                Toast.makeText(CreateProfileActivity.this, throwable.getMessage(), Toast.LENGTH_LONG).show();
             }
         });
     }
 
-    private void loadDistricts(LocationService locationService, String provinceCode){
+    private void loadDistricts(LocationService locationService, String provinceCode) {
         locationService.getDistricts(provinceCode).enqueue(new Callback<DistrictResponse>() {
             @Override
             public void onResponse(Call<DistrictResponse> call, Response<DistrictResponse> response) {
-                if (response.isSuccessful() && response.body() != null){
+                if (response.isSuccessful() && response.body() != null) {
                     districtList = response.body().getData();
-                    HandleAutoComplete.setupDropDown(autoDistrict,districtList);
+                    HandleAutoComplete.setupDropDown(autoDistrict, districtList);
                     autoDistrict.setOnItemClickListener((parent, view, position, id) -> {
                         autoWard.setText("");
+                        selectedWardCode = null;
+
                         District selected = (District) parent.getItemAtPosition(position);
                         selectedDistrictCode = selected.getCode();
                         loadWard(locationService, selectedDistrictCode);
                     });
+                    return;
                 }
-                else {
-                    Toast.makeText(CreateProfileActivity.this, "Không lấy được huyện: " + response.code(),
-                            Toast.LENGTH_LONG).show();
-                }
+                Toast.makeText(CreateProfileActivity.this, "Khong lay duoc huyen: " + response.code(), Toast.LENGTH_LONG).show();
             }
 
             @Override
             public void onFailure(Call<DistrictResponse> call, Throwable throwable) {
-                Toast.makeText(CreateProfileActivity.this,
-                        throwable.getMessage(), Toast.LENGTH_LONG).show();
+                Toast.makeText(CreateProfileActivity.this, throwable.getMessage(), Toast.LENGTH_LONG).show();
             }
         });
     }
 
-    private void loadWard(LocationService locationService, String districtCode){
+    private void loadWard(LocationService locationService, String districtCode) {
         locationService.getWards(districtCode).enqueue(new Callback<WardResponse>() {
             @Override
             public void onResponse(Call<WardResponse> call, Response<WardResponse> response) {
-                if (response.isSuccessful() && response.body() != null){
+                if (response.isSuccessful() && response.body() != null) {
                     wardList = response.body().getData();
                     HandleAutoComplete.setupDropDown(autoWard, wardList);
                     autoWard.setOnItemClickListener((parent, view, position, id) -> {
                         Ward selected = (Ward) parent.getItemAtPosition(position);
                         selectedWardCode = selected.getCode();
                     });
+                    return;
                 }
-                else {
-                    Toast.makeText(CreateProfileActivity.this,  "Không lấy được phường: " + response.code(),
-                            Toast.LENGTH_LONG).show();
-                }
+                Toast.makeText(CreateProfileActivity.this, "Khong lay duoc phuong: " + response.code(), Toast.LENGTH_LONG).show();
             }
 
             @Override
@@ -287,76 +281,87 @@ public class CreateProfileActivity extends AppCompatActivity {
         });
     }
 
-    private void processOCR(Uri imageUri, OCRService ocrService) {
+    private void processOCR(Uri imageUri) {
         loadingDialog.show();
         try {
-            // 1. Đọc bytes từ Uri
             InputStream inputStream = getContentResolver().openInputStream(imageUri);
-            ByteArrayOutputStream buffer = new ByteArrayOutputStream();
-
-            int nRead;
-            byte[] data = new byte[4096];
-            while ((nRead = inputStream.read(data, 0, data.length)) != -1) {
-                buffer.write(data, 0, nRead);
+            if (inputStream == null) {
+                throw new IllegalStateException("Cannot open selected image");
             }
-            buffer.flush();
-            byte[] imageBytes = buffer.toByteArray();
 
-            // 2. Tạo RequestBody + MultipartBody.Part
-            okhttp3.RequestBody requestFile =
-                    okhttp3.RequestBody.create(
-                            imageBytes,
-                            okhttp3.MediaType.parse("image/*")
-                    );
+            ByteArrayOutputStream buffer = new ByteArrayOutputStream();
+            byte[] bytes = new byte[4096];
+            int read;
+            while ((read = inputStream.read(bytes)) != -1) {
+                buffer.write(bytes, 0, read);
+            }
+            inputStream.close();
 
-            MultipartBody.Part body =
-                    MultipartBody.Part.createFormData("file", "cccd.jpg", requestFile);
+            RequestBody requestFile = RequestBody.create(
+                    buffer.toByteArray(),
+                    MediaType.parse("image/*")
+            );
+            MultipartBody.Part body = MultipartBody.Part.createFormData("file", "cccd.jpg", requestFile);
 
-            // 3. Gọi API
             ocrService.uploadCccd(body).enqueue(new Callback<OcrResponse>() {
                 @Override
                 public void onResponse(Call<OcrResponse> call, Response<OcrResponse> response) {
                     loadingDialog.dismiss();
-                    if (response.isSuccessful() && response.body() != null) {
-                        OcrResponse ocr = response.body();
-                        CccdData data = ocr.getData();
-
-                        String msg = "Tên: " + data.getFullName()
-                                + "\nQuốc gia: " + data.getCountry()
-                                + "\nGiới tính: " + data.getGender()
-                                + "\nNgày sinh: " + data.getDateOfBirth()
-                                + "\nĐịa chỉ: " + data.getAddress();
-
-                        etFullName.setText(data.getFullName());
-                        autoGender.setText(data.getGender());
-                        autoCountry.setText(data.getCountry());
-                        etDob.setText(data.getDateOfBirth());
-                        etAddressDetail.setText(data.getAddress());
-
-                        Toast.makeText(CreateProfileActivity.this, "Scan hoàn tất", Toast.LENGTH_LONG).show();
-                        Log.d("MyOCR", msg);
-                    } else {
-                        Toast.makeText(CreateProfileActivity.this,
-                                "OCR thất bại: " + response.code(), Toast.LENGTH_LONG).show();
-                        Log.d("MyOCR", "OCR thất bại: " + response.code());
+                    if (!response.isSuccessful() || response.body() == null) {
+                        Toast.makeText(CreateProfileActivity.this, "OCR that bai: " + response.code(), Toast.LENGTH_LONG).show();
+                        return;
                     }
+
+                    CccdData data = response.body().getData();
+                    if (data == null) {
+                        Toast.makeText(CreateProfileActivity.this, "OCR khong tra ve du lieu CCCD", Toast.LENGTH_LONG).show();
+                        return;
+                    }
+
+                    bindCccdData(data);
+                    Toast.makeText(CreateProfileActivity.this, "Scan hoan tat", Toast.LENGTH_LONG).show();
+                    Log.d("MyOCR", "OCR success: " + data.getFullName());
                 }
 
                 @Override
                 public void onFailure(Call<OcrResponse> call, Throwable throwable) {
                     loadingDialog.dismiss();
-                    Toast.makeText(CreateProfileActivity.this,
-                            "Lỗi mạng: " + throwable.getMessage(), Toast.LENGTH_LONG).show();
-                    Log.d("MyOCR", "Lỗi mạng: " + throwable.getMessage());
+                    Toast.makeText(CreateProfileActivity.this, "Loi OCR: " + throwable.getMessage(), Toast.LENGTH_LONG).show();
+                    Log.d("MyOCR", "OCR network error: " + throwable.getMessage());
                 }
             });
-
-
-
         } catch (Exception e) {
-            e.printStackTrace();
             loadingDialog.dismiss();
-            Toast.makeText(this, "Lỗi đọc ảnh: " + e.getMessage(), Toast.LENGTH_LONG).show();
+            Toast.makeText(this, "Loi doc anh: " + e.getMessage(), Toast.LENGTH_LONG).show();
+            Log.d("MyOCR", "Read image error", e);
         }
+    }
+
+    private void bindCccdData(CccdData data) {
+        if (!data.getFullName().isEmpty()) {
+            etFullName.setText(data.getFullName());
+        }
+        if (data.getGender() != null && !data.getGender().isEmpty()) {
+            autoGender.setText(normalizeGender(data.getGender()), false);
+        }
+        if (data.getCountry() != null && !data.getCountry().isEmpty()) {
+            autoCountry.setText(normalizeCountry(data.getCountry()), false);
+        }
+        if (!data.getDateOfBirth().isEmpty()) {
+            etDob.setText(data.getDateOfBirth());
+        }
+        if (data.getAddress() != null && !data.getAddress().isEmpty()) {
+            etAddressDetail.setText(data.getAddress());
+        }
+    }
+
+    private String normalizeGender(String gender) {
+        if (gender.equalsIgnoreCase("Nu") || gender.equalsIgnoreCase("Nữ")) return "Nu";
+        if (gender.equalsIgnoreCase("Nam")) return "Nam";
+        return "Khac";
+    }
+
+    private String normalizeCountry(String country) {
+        return country.toLowerCase().contains("viet") ? "Viet Nam" : country;
     }
 }
